--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,6 @@
 <footer class="footer">
   <small>
-    <%= raw t ".content" %>
+    <a><%= t ".content3" %></a>
+    <p><%= t ".content4" %></p>
   </small>
 </footer>
