--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,7 +22,7 @@
         <% else %>
           <li><%= link_to t(".login"), user_session_path %></li>
         <% end %>
-
+        <li><%= link_to t("products"), products_path %></li>
         <li><%= link_to t(".english"), locale: :en %></li>
         <li><%= link_to t(".vietnam"), locale: :vn %></li>
       </ul>
