--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <li><%= link_to t(".about"), pages_about_path %></li>
         <li><%= link_to t(".contact"), pages_contact_path %></li>
         <% if user_signed_in? %>
-          <li><%= link_to t(".users"), "#" %></li>
+          <li><%= link_to t(".users"), users_path %></li>
           <li class="dropdown">
             <a href = "#" class="dropdown-toggle" data-toggle="dropdown">
               <%= t ".account" %><b class="caret"></b></a>
