--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,45 +1,50 @@
 <div class="row">
-  <%= link_to t("sell_product"), new_product_path, class: "btn btn-success" %>
-  <br>
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th><%= t "id" %></th>
-        <th><%= t "title" %>Title</th>
-        <th><%= t "des" %></th>
-        <th><%= t "price" %></th>
-        <th><%= t "img" %></th>
-        <th span="3"><%= t "action" %></th>
-      </tr>
-    </thead>
-    <tbody>
+  <div class="main">
+    <% if user_signed_in? %>
+      <%= link_to t("sell_product"), new_product_path,
+        class: "btn btn-success" %>
+    <% end %>
+    <br>
+    <div class="row">
     <% if @products.present? %>
       <% @products.each do |product| %>
-      <tr>
-        <td><%= product.id %></td>
-        <td><%= product.title %></td>
-        <td><%= product.description %></td>
-        <td><%= number_to_currency product.price %></td>
-        <td><%= image_tag product.product_image.url(:thumb) %></td>
-        <td>
-          <%= link_to product_path(product) do %>
-            <i class="ion ion-ios-information-outline"></i>
+      <div class="col-sm-3 col-lg-3 col-md-3">
+        <div class="card">
+          <%= image_tag product.product_image.url(:thumb),
+            class: "card-img-top" %>
+          <div class="card-block">
+            <h5 class="card-title text-bold"><%= product.title %></h5>
+            <div class="meta">
+              <%= link_to product.user.username, "#" %>
+            </div>
+            <h5 class="card-text">
+              <%= number_to_currency product.price %>
+            </h5>
+            <%= link_to t("add_to_cart"), "#", class: "btn btn-danger" %>
+          </div>
+          <% if current_user.username == product.user.username %>
+            <div class="card-footer">
+              <%= link_to product_path(product),
+                class: "btn btn-sm btn-info" do %>
+                <i class="ion ion-ios-information-outline"></i>
+                <%= t "show" %>
+              <% end %>
+              <%= link_to edit_product_path(product),
+                class: "btn btn-sm btn-success" do %>
+                <i class="ion ion-compose"></i> <%= t "edit" %>
+              <% end %>
+              <%= link_to product_path(product), method: :delete,
+                data: {confirm: t("are_you_sure")},
+                class: "btn btn-sm btn-danger" do %>
+                <i class="ion ion-ios-trash-outline"></i>
+                <%= t "delete" %>
+              <% end %>
+            </div>
           <% end %>
-        </td>
-        <td>
-          <%= link_to edit_product_path(product) do %>
-            <i class="ion ion-compose"></i>
-          <% end %>
-        </td>
-        <td>
-          <%= link_to product_path(product), method: :delete,
-            data: {confirm: t("are_you_sure")} do %>
-            <i class="ion ion-ios-trash-outline"></i>
-          <% end %>
-        </td>
-      </tr>
+        </div>
+      </div>
       <% end %>
     <% end %>
-    </tbody>
-  </table>
+    </div>
+  </div>
 </div>
