--- a/app/views/users/_unfollow.html.erb
+++ b/app/views/users/_unfollow.html.erb
@@ -1,3 +1,3 @@
-<%= form_for unfollow, html: {method: :delete}, remote: true do |f| %>
+<%= form_for following, html: {method: :delete}, remote: true do |f| %>
   <%= f.submit t("unfollow"), class: "btn" %>
 <% end %>
