--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,8 @@
             <a href = "#" class="dropdown-toggle" data-toggle="dropdown">
               <%= t ".account" %><b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><%= link_to t(".profile"), edit_user_registration_path %></li>
+              <li><%= link_to t(".profile"),
+                edit_user_registration_path %></li>
               <li><%= link_to t(".setting"), edit_user_password_path %></li>
               <li class="divider"></li>
               <li><%= link_to t(".logout"), destroy_user_session_path, method: :delete %></li>
