--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -1,4 +1,4 @@
-<%= form_for follow, remote: true do |f| %>
+<%= form_for following, remote: true do |f| %>
   <div><%= hidden_field_tag :followed_id, user.id %></div>
   <%= f.submit t("follow"), class: "btn btn-primary" %>
 <% end %>
