--- a/app/views/users/_follow_form.html.erb
+++ b/app/views/users/_follow_form.html.erb
@@ -1,7 +1,7 @@
 <div id="follow_form">
   <% if following.new_record? %>
-    <%= render "follow", follow: following, user: user %>
+    <%= render "follow", following: following, user: user %>
   <% else %>
-    <%= render "unfollow", unfollow: following %>
+    <%= render "unfollow", following: following %>
   <% end %>
 </div>
