--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,9 +1,11 @@
 <div class="row">
-  <div class="col-md-9">
-    <div class="primary-content">
-      <div class="row">
-        <div class="col-sm-12">
-          <%= render "form", product: @product, categories: @categories %>
+  <div class="main">
+    <div class="col-md-9">
+      <div class="primary-content">
+        <div class="row">
+          <div class="col-sm-12">
+            <%= render "form", product: @product, categories: @categories %>
+          </div>
         </div>
       </div>
     </div>
