--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,11 +1,61 @@
 <div class="row">
-  <div class="col-md-9">
-    <div class="panel panel-success">
-      <div class="panel-body">
-        <%= image_tag @product.product_image.url(:thumb) %>
-        <%= @product.title %>
-        <%= number_to_currency @product.price %>
-        <%= @product.description %>
+  <div class="main">
+    <div class="col-md-9">
+      <div class="panel panel-info">
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-sm-3">
+              <%= image_tag @product.product_image.url(:thumb),
+                class: "img-thumbnail" %>
+            </div>
+            <div class="col-sm-9">
+              <h3><%= @product.title %></h3>
+              <h4><%= number_to_currency @product.price %></h4>
+              <h5><%= @product.description %></h5>
+              <%= link_to t("add_to_cart"), "#", class: "btn btn-danger" %>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="panel panel-info">
+        <div class="panel-body">
+          <div class="row">
+            <div class="col-sm-12">
+              <ul class="nav nav-tabs">
+                <li class="active">
+                  <a data-toggle="tab" href="#comment"><%= t "comment" %></a>
+                </li>
+                <li>
+                  <a data-toggle="tab" href="#reviewers">
+                    <%= t "reviewers" %>
+                  </a>
+                </li>
+              </ul>
+              <div class="tab-content">
+                <div id="comment" class="tab-pane fade in active">
+                  <br>
+                  <%= form_for [@product, @comment], remote: true do |f| %>
+                    <div class="form-group">
+                      <%= f.text_area :content, class: "form-control" %>
+                    </div>
+                    <div class="form-group">
+                      <%= f.submit t("comment"), class: "btn btn-success" %>
+                    </div>
+                  <% end %>
+                  <hr>
+                  <div id="comments-list-box">
+                    <% if @product.comment_products.present? %>
+                      <%= render @product.comment_products %>
+                    <% end %>
+                  </div>
+                </div>
+                <div id="reviewers" class="tab-pane fade">
+                  <br>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
