--- a/app/views/comment_products/_comment_product.html.erb
+++ b/app/views/comment_products/_comment_product.html.erb
@@ -17,41 +17,57 @@
             <%= time_ago_in_words comment_product.created_at %>
           </span>
           <div class="pull-right">
-            <%= link_to "#modal-comment-" + comment_product.id.to_s,
-              data: {toggle: "modal"} do %>
-              <i class="ion ion-compose"></i>
-            <% end %>
-            <div class="modal fade"
-              id="modal-comment-<%= comment_product.id %>" role="dialog">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close"
-                      data-dismiss="modal">&times;</button>
-                  </div>
-                  <div class="modal-body">
-                    <%= form_for [comment_product.product, comment_product],
-                      method: :patch, remote: true do |f| %>
-                      <div class="form-group">
-                        <%= f.text_area :content, class: "form-control" %>
-                      </div>
-                      <div class="form-group">
-                        <%= f.submit t("update"), class: "btn btn-success" %>
-                      </div>
-                    <% end %>
+            <% if user_signed_in? &&
+              current_user.username == comment_product.user.username %>
+              <%= link_to "#modal-comment-" + comment_product.id.to_s,
+                data: {toggle: "modal"} do %>
+                <i class="ion ion-compose"></i>
+              <% end %>
+              <div class="modal fade"
+                id="modal-comment-<%= comment_product.id %>" role="dialog">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close"
+                        data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                      <%= form_for [comment_product.product, comment_product],
+                        method: :patch, remote: true do |f| %>
+                        <div class="form-group">
+                          <%= f.text_area :content, class: "form-control" %>
+                        </div>
+                        <div class="form-group">
+                          <%= f.submit t("update"), class: "btn btn-success" %>
+                        </div>
+                      <% end %>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <%= link_to product_comment_product_path(comment_product.product,
-              comment_product), method: :delete,
-              remote: true, data: {confirm: t("are_you_sure")} do %>
-              <i class="ion ion-close-round"></i>
+              <%= link_to product_comment_product_path(comment_product.product,
+                comment_product), method: :delete,
+                remote: true, data: {confirm: t("are_you_sure")} do %>
+                <i class="ion ion-close-round"></i>
+              <% end %>
             <% end %>
           </div>
         </div>
         <div class="panel-body">
           <%= comment_product.content %>
+        </div>
+        <div class="panel-footer">
+          <% if user_signed_in? %>
+            <div id="unlike-<%= comment_product.id %>">
+              <%= render "likeships/unlike",
+                comment_product: comment_product,
+                like: current_user.liking?(comment_product.id) if current_user.liking?(comment_product.id).present? %>
+            </div>
+            <div id="like-<%= comment_product.id %>">
+              <%= render "likeships/like",
+                comment_product: comment_product if current_user.liking?(comment_product.id).blank? %>
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
