--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,6 +20,11 @@
               <li><%= link_to t(".logout"), destroy_user_session_path, method: :delete %></li>
             </ul>
           </li>
+          <% if can? :read, Feedback %>
+            <li><%= link_to t("feedback"), admin_feedbacks_path %></li>
+          <% else %>
+            <li><%= link_to t("feedback"), new_feedback_path %></li>
+          <% end %>
         <% else %>
           <li><%= link_to t(".login"), user_session_path %></li>
         <% end %>
