--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,3 +9,8 @@
     </aside>
   </div>
 <% end %>
+<aside class="col-md-4">
+  <section class="right">
+    <%= render "users/shop", users: @users, products: @products %>
+  </section>
+</aside>
