--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -19,7 +19,7 @@
   <div class="form-group">
     <%= f.label :category %>
     <%= f.select :category_id,
-      options_from_collection_for_select(categories, :id, :name),
+      options_from_collection_for_select(category, :id, :name),
       {prompt: "Select one category"}, {class: "form-control"} %>
   </div>
 
