--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="primary-content">
       <div class="row">
         <div class="col-sm-12">
-          <%= render "form", product: @product, categories: @categories %>
+          <%= render "form", product: @product, category: @user %>
         </div>
       </div>
     </div>
