--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -248,16 +248,12 @@ $text-danger-color: #ff0342;
   border: 0;
 }
 
-.m-t-md {
+.user-shop-image {
   margin-top: 20px;
 }
 
-.m-t-lg {
+.user-shop-card {
   margin-top: 40px;
-}
-
-.m-l-md {
-  margin-left: 20px;
 }
 
 .clearfix img {
