--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,7 @@
-<h1><%= t ".content1" %></h1>
-<p><%= t ".content2" %></p>
-<% if user_signed_in? %>
-  <div class="row">
-    <aside class="col-md-4">
-      <section class="stats">
-        <%= render "shared/stats" %>
-      </section>
-    </aside>
-  </div>
-<% end %>
-<aside class="col-md-4">
-  <section class="right">
-    <%= render "users/shop", users: @users, products: @products %>
-  </section>
-</aside>
+<div class="main">
+  <aside class="col-md-12">
+    <section class="right">
+      <%= render "users/shop", users: @users, products: @products %>
+    </section>
+  </aside>
+</div>
