--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,11 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<header class="navbar navbar-fixed-top navbar-default">
   <div class="container">
     <%= link_to t("logo"), root_path, class: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to t(".home"), root_path %></li>
-        <li><%= link_to t(".help"), pages_help_path %></li>
-        <li><%= link_to t(".about"), pages_about_path %></li>
-        <li><%= link_to t(".contact"), pages_contact_path %></li>
         <% if user_signed_in? %>
           <li><%= link_to t(".users"), users_path %></li>
+          <li class="cart-text"><%= render "layouts/cart_text" %></li>
           <li class="dropdown">
             <a href = "#" class="dropdown-toggle" data-toggle="dropdown">
               <%= t ".account" %><b class="caret"></b></a>
@@ -30,12 +27,22 @@
             <li><%= link_to t("category"), admin_categories_path %></li>
           <% end %>
           <li><%= link_to t("products"),
-            user_products_path(current_user) %></li>
+            user_products_path(current_user) unless current_user.admin? %></li>
         <% else %>
           <li><%= link_to t(".login"), user_session_path %></li>
         <% end %>
-        <li><%= link_to t(".english"), locale: :en %></li>
-        <li><%= link_to t(".vietnam"), locale: :vn %></li>
+        <li>
+          <%= link_to t(".english"), locale: :en do %>
+            <%= image_tag "https://lipis.github.io/flag-icon-css/flags/4x3/gb.svg",
+              class: "uk" %>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to t(".vietnam"), locale: :vn do %>
+            <%= image_tag "https://lipis.github.io/flag-icon-css/flags/4x3/vn.svg",
+              class: "vn" %>
+          <% end %>
+        </li>
       </ul>
     </nav>
   </div>
