--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,16 @@
               <h3><%= @product.title %></h3>
               <h4><%= number_to_currency @product.price %></h4>
               <h5><%= @product.description %></h5>
-              <%= link_to t("add_to_cart"), "#", class: "btn btn-danger" %>
+              <% if @order_item.present? %>
+                <%= form_for @order_item, url: order_items_path(@order_item),
+                  remote: true do |f| %>
+                  <%= f.hidden_field :quantity, value: 1,
+                  class: "form-control", min: 1 %>
+                  <%= f.hidden_field :product_id, value: @product.id %>
+                  <%= f.submit t("add_to_cart"),
+                  class: "btn btn-danger" unless current_user.admin?%>
+                <% end %>
+              <% end %>
             </div>
           </div>
         </div>
