--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,6 +1,6 @@
 <h2><%= t ".title" %></h2>
 
-<%= form_for resource, as: resource_name, url: confirmation_path resource_name,
+<%= form_for resource, as: resource_name, url: confirmation_path(resource_name),
   html: {method: :post} do |f| %>
   <%= devise_error_messages! %>
   <div class="field">
