--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="main">
   <aside class="col-md-12">
     <section class="right">
-      <%= render "users/shop", users: @users, products: @products %>
+      <%= render "users/shop", users: @users %>
     </section>
   </aside>
 </div>
