--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,54 +6,55 @@
     <% end %>
     <br><br>
     <div class="row">
-    <% if @products.present? %>
-      <% @products.each do |product| %>
-      <div class="col-sm-3 col-lg-3 col-md-3">
-        <div class="card">
-          <%= image_tag product.product_image.url(:thumb),
-            class: "card-img-top" %>
-          <div class="card-block">
-            <h5 class="card-title text-bold">
-              <%= link_to product.title, product_path(product) %>
-            </h5>
-            <div class="meta">
-              <%= link_to product.user.username, "#" %>
-            </div>
-            <h5 class="card-text">
-              <%= number_to_currency product.price %>
-            </h5>
-            <% if @product.present? %>
-              <%= form_for @product, url: order_items_path(@product),
-                remote: true do |f| %>
-                <%= f.hidden_field :quantity, value: 1,
-                  class: "form-control", min: 1 %>
-                <%= f.hidden_field :product_id, value: product.id %>
-                <%= f.submit t("add_to_cart"),
-                  class: "btn btn-danger" unless current_user.admin?%>
+      <% if @products.present? %>
+        <% @products.each do |product| %>
+        <div class="col-sm-3 col-lg-3 col-md-3", style="padding-top: 5px;">
+          <div class="card" >
+            <%= rating_for product, "quality", star: 5 %>
+            <%= image_tag product.product_image.url(:thumb),
+              class: "card-img-top" %>
+            <div class="card-block">
+              <h5 class="card-title text-bold">
+                <%= link_to product.title, product_path(product) %>
+              </h5>
+              <div class="meta">
+                <%= link_to product.user.username, "#" %>
+              </div>
+              <h5 class="card-text">
+                <%= number_to_currency product.price %>
+              </h5>
+              <% if @product.present? %>
+                <%= form_for @product, url: order_items_path(@product),
+                  remote: true do |f| %>
+                  <%= f.hidden_field :quantity, value: 1,
+                    class: "form-control", min: 1 %>
+                  <%= f.hidden_field :product_id, value: product.id %>
+                  <%= f.submit t("add_to_cart"),
+                    class: "btn btn-danger" unless current_user.admin?%>
+                <% end %>
               <% end %>
+            </div>
+            <% if user_signed_in? &&
+              current_user.username == product.user.username %>
+              <div class="card-footer">
+                <%= link_to product_path(product) do %>
+                  <i class="ion ion-ios-information-outline"></i>
+                  <%= t "show" %>
+                <% end %>
+                <%= link_to edit_product_path(product) do %>
+                  <i class="ion ion-compose"></i> <%= t "edit" %>
+                <% end %>
+                <%= link_to product_path(product), method: :delete,
+                  data: {confirm: t("are_you_sure")} do %>
+                  <i class="ion ion-ios-trash-outline"></i>
+                  <%= t "delete" %>
+                <% end %>
+              </div>
             <% end %>
           </div>
-          <% if user_signed_in? &&
-            current_user.username == product.user.username %>
-            <div class="card-footer">
-              <%= link_to product_path(product) do %>
-                <i class="ion ion-ios-information-outline"></i>
-                <%= t "show" %>
-              <% end %>
-              <%= link_to edit_product_path(product) do %>
-                <i class="ion ion-compose"></i> <%= t "edit" %>
-              <% end %>
-              <%= link_to product_path(product), method: :delete,
-                data: {confirm: t("are_you_sure")} do %>
-                <i class="ion ion-ios-trash-outline"></i>
-                <%= t "delete" %>
-              <% end %>
-            </div>
-          <% end %>
         </div>
-      </div>
+        <% end %>
       <% end %>
-    <% end %>
     </div>
   </div>
 </div>
