--- a/app/views/users/_shop.html.erb
+++ b/app/views/users/_shop.html.erb
@@ -4,8 +4,14 @@
       <div class="card">
         <div class="card-block">
           <div class="clearfix">
-            <%= image_tag user.image.url(:med),
+            <br/>
+            <%= rating_for user, "quality", star: 5 %>
+            <% if user.image.present? %>
+              <%= image_tag user.image.url(:med),
               class: "img-circle pull-left user-shop-image" %>
+            <% else %>
+              <% image_tag "default.jpg" %>
+            <% end %>
             <div class="pull-right">
               <div class="card-title text-bold user-shop-card">
                 <%= user.username %>
