--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,7 +1,12 @@
 <li>
-  <%= link_to image_tag(user.image.url(:small)), user.image.url %>
+  <% if user.image.present? %>
+    <%= link_to image_tag(user.image.url(:small)), user.image.url %>
+  <% else %>
+    <% image_tag "default.jpg" %>
+  <% end %>
   <a class="tab" />
   <%= link_to user.username, user %>
+  <%= rating_for user, "quality", star: 5 %>
 </li>
 <% if current_user.admin? && !user.current_user?(current_user) %>
   <%= link_to t(".linkto6"), user, method: :delete,
