--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,17 @@
       <%= render "layouts/header" %>
       <%= yield %>
     </div>
+    <script async="async" src="https://www.paypalobjects.com/js/external/paypal-button.min.js?merchant=hero4120@gmail.com"
+    data-button="donate"
+    data-name="dong gop"
+    data-quantity="1"
+    data-amount="5"
+    data-currency="USD"
+    data-shipping="0.75"
+    data-tax="3.5"
+    data-callback="http://localhost:3000"
+    data-env="sandbox"
+></script>
     <%= render "layouts/footer" %>
   </body>
 </html>
