--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,13 @@
 <% provide :title, t(".title") %>
 <h1><%= t ".content2" %></h1>
+<%= form_tag users_path, method: :get, class: "navbar-form navbar-right", role: "search" do %>
+  <p>
+    <%= text_field_tag :search, params[:search], class: "form-control",
+        placeholder: "Search...", id: "search", autocomplete: "off" %>
+    <%= submit_tag "Search", class: "btn btn-default" %>
+  </p>
+<% end %>
+<br/>
 <%= will_paginate %>
   <ol class="users">
     <%= render @users %>
