--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,9 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-          <li><%= link_to t(".users"), users_path %></li>
+          <% if can? :read, User %>
+            <li><%= link_to t(".users"), users_path %></li>
+          <% end %>
           <li class="cart-text"><%= render "layouts/cart_text" %></li>
           <li class="dropdown">
             <a href = "#" class="dropdown-toggle" data-toggle="dropdown">
@@ -26,8 +28,10 @@
           <% if can? :read, Category %>
             <li><%= link_to t("category"), admin_categories_path %></li>
           <% end %>
-          <li><%= link_to t("products"),
-            user_products_path(current_user) unless current_user.admin %></li>
+          <% if can? :read, Product %>
+            <li><%= link_to t("products"),
+              user_products_path(current_user) %></li>
+          <% end %>
         <% else %>
           <li><%= link_to t(".login"), user_session_path %></li>
         <% end %>
