--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,7 +19,7 @@
                   class: "form-control", min: 1 %>
                   <%= f.hidden_field :product_id, value: @product.id %>
                   <%= f.submit t("add_to_cart"),
-                  class: "btn btn-danger" unless current_user.admin?%>
+                  class: "btn btn-danger" %>
                 <% end %>
               <% end %>
             </div>
