--- a/app/views/orders/_order_shopping.html.erb
+++ b/app/views/orders/_order_shopping.html.erb
@@ -10,5 +10,6 @@
 <p><%= link_to t("continue_shopping"), root_path,
       class: "btn btn-danger btn-lg" %></p>
 <% @order_items.each do |order_item| %>
-  <%= render "orders/order_row", product: order_item.product, order_item: order_item, show_total: true %>
+  <%= render "orders/order_row", product: order_item.product,
+    order_item: order_item, show_total: true %>
 <% end %>
