--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,19 +1,12 @@
 <div class="row">
   <div class="main">
     <% if user_signed_in? %>
-      <% if can? :read, Product %>
+      <% if can? :create, Product %>
         <%= link_to t("sell_product"), new_product_path,
           class: "btn btn-success" %>
       <% end %>
     <% end %>
     <br><br>
-    <%= form_tag user_products_path, method: :get, class: "navbar-form navbar-right", role: "search" do %>
-      <p>
-        <%= text_field_tag :search, params[:search], class: "form-control",
-            placeholder: "Search...", id: "search", autocomplete: "off" %>
-        <%= submit_tag "Search", class: "btn btn-default" %>
-      </p>
-    <% end %>
     <div class="row">
       <% if @products.present? %>
         <% @products.each do |product| %>
