--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -18,8 +18,10 @@
                   <%= f.hidden_field :quantity, value: 1,
                   class: "form-control", min: 1 %>
                   <%= f.hidden_field :product_id, value: @product.id %>
-                  <%= f.submit t("add_to_cart"),
-                  class: "btn btn-danger" %>
+                  <% if can? :read, Product %>
+                    <%= f.submit t("add_to_cart"),
+                    class: "btn btn-danger" %>
+                  <% end %>
                 <% end %>
               <% end %>
             </div>
