--- a/app/views/order_items/destroy.js.erb
+++ b/app/views/order_items/destroy.js.erb
@@ -1,2 +1,2 @@
 $('.cart-text').html('<%= j render "layouts/cart_text") %>'
-$('.shopping-cart').html('<%= j render "orders/order_shopping" %>')
+$('.order_shopping').html('<%= j render "orders/order_shopping" %>')
