--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -34,7 +34,9 @@
             <div class="col-sm-12">
               <ul class="nav nav-tabs">
                 <li class="active">
-                  <a data-toggle="tab" href="#comment"><%= t "comment" %></a>
+                  <a data-toggle="tab" href="#comment">
+                    <%= t "comment" %>
+                  </a>
                 </li>
                 <li>
                   <a data-toggle="tab" href="#reviewers">
