--- a/app/views/users/_shop.html.erb
+++ b/app/views/users/_shop.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <% users.each do |user| %>
-    <div class="col-sm-3 col-lg-3 col-md-3">
+    <div class="col-sm-3 col-lg-3 col-md-3 m-b-md">
       <div class="card">
         <div class="card-block">
           <div class="clearfix">
